Fixes bug 93580 "http HEAD requests don't complete until server closes the connection" r=bbaetz, sr=brendan